k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend

        image: 060516714221.dkr.ecr.ap-south-1.amazonaws.com/skybook-backend:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 8081
