k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend

spec:
  selector:
    app: backend

  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081

  type: NodePort
